updated regression report

--- a/Assessment/ConfigFiles/Configuration.properties
+++ b/Assessment/ConfigFiles/Configuration.properties
@@ -7,3 +7,5 @@ HomePageTitle=Where now meets next.
 reportConfigPath= C:\Users\Shalini\IdeaProjects\Assessment\ConfigFiles\extentReport.xml
 ShipWithoutaccountURL=https://www.fedex.com/lite/lite-ship.html?locale=en_nl&cntry_code=nl_english#address
 loginPagetitle=CREATE A USER ID FOR AN EXISTING ACCOUNT
+userName=shalini
+password=shalini@123
