Updated new test case

--- a/Assessment/ConfigFiles/Configuration.properties
+++ b/Assessment/ConfigFiles/Configuration.properties
@@ -9,3 +9,22 @@ ShipWithoutaccountURL=https://www.fedex.com/lite/lite-ship.html?locale=en_nl&cnt
 loginPagetitle=CREATE A USER ID FOR AN EXISTING ACCOUNT
 userName=shalini
 password=shalini@123
+notification=Unfortunately we are unable to retrieve your tracking results at this time. Please try again later.
+trackID=123456789
+loginUsername=Shalini0311
+loginPassword=Shal0311
+loginrePassword=Shal0311
+contactFirstName=shalini
+contactLastName=dwivedi
+contactCompany=fedex
+momName=Geeta
+contactCountryzip=1188LK
+contactAddress1=26 orson
+contactCity=Almere
+contactState=NL
+contactEmail=d.shalini0311@gmail.com
+contactretypeEmail=d.shalini0311@gmail.com
+contactPhone=+31684173589
+
+
+
